--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: DID(it) Playbook
 description: If you build it, they will come.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: "/USCIS/didit_playbook/images/didit_round.svg"
 #
 # Flags below are optional
 #
