Plays should be more or less working.

--- a/_data/header.yml
+++ b/_data/header.yml
@@ -3,7 +3,7 @@ brand:
   url: index
 left_nav:
   - title: Players
-  - title: Playlist
+  - title: Plays
   - title: Practices
 right_nav:
   - title: About DID(it)
