--- a/_data/plays/business_goals.yml
+++ b/_data/plays/business_goals.yml
@@ -31,7 +31,7 @@ related:
       alt: icon
   - title: Stack Rank
     image:
-      filename: pb-stackrank@2x.png
+      filename: pb-stackranking@2x.png
       alt: icon
   - title: Dot Voting
     image:
