--- a/_data/plays/inception.yml
+++ b/_data/plays/inception.yml
@@ -27,5 +27,5 @@ related:
       alt: icon
   - title: Stack Rank
     image:
-      filename: pb-stackrank@2x.png
+      filename: pb-stackranking@2x.png
       alt: icon
