--- a/_data/practices/2x2_sorting.yml
+++ b/_data/practices/2x2_sorting.yml
@@ -22,11 +22,5 @@ steps:
   - title: Assign work
     text: Once the work is sorted into quadrants, the product manager takes a picture of the board and reports back out to the group. The low effort and high impact quadrant work are set to the highest priority.
 related:
-  - title: Discovery
-    image:
-      filename: pb-discovery@2x.png
-      alt: ...
-  - title: Framing
-    image:
-      filename: pb-framing@2x.png
-      alt: ...
+  - Discovery
+  - Framing
