--- a/_data/plays/business_goals.yml
+++ b/_data/plays/business_goals.yml
@@ -17,23 +17,7 @@ steps:
   - title: Stack Rank (alternative activity)
     text: Create a single rank order list of the goal clusters. Learn more about <a href="../stack_rank">stack rank</a>.
 related:
-  - title: Dump and Sort
-    image:
-      filename: pb-dumpsort@2x.png
-      alt: icon
-  - title: Affinity Clusters
-    image:
-      filename: pb-affinityclusters@2x.png
-      alt: icon
-  - title: 2x2 Sorting
-    image:
-      filename: pb-2x2sort@2x.png
-      alt: icon
-  - title: Stack Rank
-    image:
-      filename: pb-stackranking@2x.png
-      alt: icon
-  - title: Dot Voting
-    image:
-      filename: pb-dotvoting@2x.png
-      alt: icon
+  - Dump and Sort
+  - 2x2 Sorting
+  - Stack Ranking
+  - Dot Voting
