--- a/_data/plays/problem_workshop.yml
+++ b/_data/plays/problem_workshop.yml
@@ -13,15 +13,6 @@ steps:
   - title: Identify technical challenges to overcome
     text: With the support of the product engineers, assess the technical complexity of the problems and form an understanding of the technical challenges and solutions that may be available for a problem. Perform a 2x2 exercise with the technical problems. Stack rank the technical problems by the business impact vs technical difficulty to solve. Learn more about <a href="../2x2_sorting">2x2 sorting</a> and <a href="../stack_rank">stack rank</a>.
 related:
-  - title: Dump and Sort
-    image:
-      filename: pb-dumpsort@2x.png
-      alt: icon
-  - title: 2x2 Sorting
-    image:
-      filename: pb-2x2sort@2x.png
-      alt: icon
-  - title: Stack Rank
-    image:
-      filename: pb-stackranking@2x.png
-      alt: icon
+  - Dump and Sort
+  - 2x2 Sorting
+  - Stack Ranking
