--- a/_data/practices/derisking.yml
+++ b/_data/practices/derisking.yml
@@ -13,11 +13,5 @@ steps:
   - title: Identify risks
     text: The team discusses any potential risks found based on the severity of impact. Identify stories that are not defined well enough to be worked and need further clarification. Break down user stories into smaller items to deliver working, demonstrable, software features. The goal is to have a backlog of stories that are 1 or 2 point stories.
 related:
-  - title: Risks and Mitigations
-    image:
-      filename: pb-risks@2x.png
-      alt: icon
-  - title: Inception
-    image:
-      filename: pb-inception@2x.png
-      alt: icon
+  - Risks and Mitigations
+  - Inception
