--- a/_data/practices/group_interview.yml
+++ b/_data/practices/group_interview.yml
@@ -12,16 +12,10 @@ steps:
     text: Find a space for the group to convene. The space needs to be on a neutral ground, such as a conference room, where all participants feel comfortable.
   - title: Conduct the interview
     text: Prior to the interview, designate one person to ask questions. Other team members will take notes and capture what the group is saying.
-  - title: Engaging with the interviewees 
+  - title: Engaging with the interviewees
     text: As you’re conducting the interview, be sure mindful of the group dynamics. If some of the members of the group have been quiet, find ways to engage with them directly, such as by asking them questions or finding ways to quiet more active members of the group.
   - title: Team compiles notes and schedules user interview synthesis
     text: The designer or product manager will compile the team's notes and then schedule a time for the team to have a user interview synthesis meeting which will help determine the problems and summarize the needs of the users.
 related:
-  - title: Discovery
-    image:
-      filename: pb-discovery@2x.png
-      alt: icon
-  - title: Framing
-    image:
-      filename: pb-framing@2x.png
-      alt: icon
+  - Discovery
+  - Framing
