--- a/_data/practices/prototyping.yml
+++ b/_data/practices/prototyping.yml
@@ -15,7 +15,4 @@ steps:
   - title: Test and refine your prototype
     text: As you test your prototype, you will find issues and challenges in your design. After receiving feedback, iterate to improve the design and solve any problems.
 related:
-  - title: Framing
-    image:
-      filename: pb-framing@2x.png
-      alt: icon
+  - Framing
