--- a/_data/practices/storyboard.yml
+++ b/_data/practices/storyboard.yml
@@ -15,11 +15,5 @@ steps:
   - title: Analyze the workflow
     text: Identify any holes or problem areas that would prevent the users from accomplishing what they want.
 related:
-  - title: Discovery
-    image:
-      filename: pb-discovery@2x.png
-      alt: icon
-  - title: Framing
-    image:
-      filename: pb-framing@2x.png
-      alt: icon
+  - Discovery
+  - Framing
