--- a/_data/plays/framing.yml
+++ b/_data/plays/framing.yml
@@ -11,14 +11,14 @@ steps:
   - title: Find the root cause for each problem
     text: For each problem, apply the 5 whys technique. Build product team consensus around the root cause. Learn more about <a href="../5_whys">5 whys</a>.
   - title: Generate a wide range of solutions
-    text: Use brainstorming and sketching techniques to explore innovative ways to solve the problems. Through these techniques, you will find you can build on the ideas of others. Learn more about <a href="../brainstorming">brainstorming </a> and a href="../sketching">sketching </a>.
+    text: Use brainstorming and sketching techniques to explore innovative ways to solve the problems. Through these techniques, you will find you can build on the ideas of others. Learn more about <a href="../brainstorming">brainstorming </a> and <a href="../sketching">sketching </a>.
   - title: Prototype interviews
-    text: Validate your assumptions using static or interactive prototypes. The best mark a feature can have is if its use is so obvious the user wonders why the interview is needed. Learn more about <a href="../framing">prototyping</a> and <a href="../prototyping">prototyping</a>.
+    text: Validate your assumptions using static or interactive prototypes. The best mark a feature can have is if its use is so obvious the user wonders why the interview is needed. Learn more about <a href="../assumptions_tracker">assumptions tracker</a> and <a href="../prototyping">prototyping</a>.
   - title: Keep your development priorities focused
     text: Demonstrate the value of your product to business stakeholders using business value metrics. Learn more about <a href="../business_value_metrics">business value metrics</a>.
 related:
   - 5 Whys
   - Brainstorming
+  - Business Value Metrics
   - Group Sketching
   - Prototyping
-  - Business Value Metrics
